# auto_accompaniment

./: .gitignore  CLAUDE.md  config.example.json  extract_pitch.py  fingerprinter.py  identifier.py  match.py  pyproject.toml  record_pitch.py  requirements-dev.txt  requirements.txt
src/auto_accompaniment/: __init__.py  __main__.py
src/auto_accompaniment/cli/: __init__.py  main.py
src/auto_accompaniment/core/: __init__.py  database.py  matching.py  pitch.py  playback.py  recorder.py
src/auto_accompaniment/utils/: __init__.py  audio.py  config.py
tests/: __init__.py
